--- a/app/views/delivery_partners/new.html.erb
+++ b/app/views/delivery_partners/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h2>Edit customer</h2>
-  <%= form_with model: @customer, url: customer_path(@customer), method: :patch, class: "form" do |f| %>
+  <h2>Onboard Delivery Partner</h2>
+  <%= form_with model: @delivery_partner, url: delivery_partners_path, method: :post, class: "form" do |f| %>
     <div class="form-group">
       <%= f.label :name %>
       <%= f.text_field :name, class: "form-control" %>
@@ -9,6 +9,6 @@
       <%= f.label :email %>
       <%= f.text_field :email, class: "form-control" %>
     </div>
-    <%= f.submit "Update Customer", class: "btn btn-primary" %>
+    <%= f.submit "Create Delivery Partner", class: "btn btn-primary" %>
   <% end %>
 </div>
