--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Customers#new</h1>
-<p>Find me in app/views/customers/new.html.erb</p>
+<div class="container">
+  <h2>Onboard Customer</h2>
+  <%= form_with model: @customer, url: customers_path, method: :post, class: "form" do |f| %>
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :email %>
+      <%= f.text_field :email, class: "form-control" %>
+    </div>
+    <%= f.submit "Create Customer", class: "btn btn-primary" %>
+  <% end %>
+</div>
