--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,10 +1,18 @@
-<h1>Editing item</h1>
-
-<%= render "form", item: @item %>
-
-<br>
-
-<div>
-  <%= link_to "Show this item", @item %> |
-  <%= link_to "Back to items", items_path %>
+<div class="container">
+  <h2>Edit item</h2>
+  <%= form_with model: @item, url: item_path(@item), method: :patch, class: "form" do |f| %>
+    <div class="form-group">
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :desc %>
+      <%= f.text_field :desc, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :shipment_id %>
+      <%= f.text_field :shipment_id, class: "form-control" %>
+    </div>
+    <%= f.submit "Update Item", class: "btn btn-primary" %>
+  <% end %>
 </div>
